--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "chalk": "^5.2.0",
     "child_process": "^1.0.2",
+    "mongodb": "^5.3.0",
     "yargs": "^17.7.1"
   }
 }
